# PlantAgora

./: .env.example  Mkdocsfile  README.md  docker-compose.yaml  docker-compose.yml  gen_doc_stubs.py  mkdocs.yml
docs/: index.md
service/: Dockerfile  Mkdocsfile  gen_doc_stubs.py  mkdocs.yml  pyproject.toml  requirements.txt
service/docs/: index.md
service/scripts/: run_unit_tests.sh  start-lint.sh  start.sh
service/src/: URLs e Endpoints.py  gunicorn_config.py  manage.py
service/src/authentication/: apps.py
service/src/authentication/admin/: GroupsAdmin.py  ProfileAdmin.py  __init__.py
service/src/authentication/api/: CreateProfileRestView.py  GetUserUsernameRestView.py  ProfileRestView.py  __init__.py
service/src/authentication/migrations/: 0001_initial.py  0002_historicalprofile.py  0003_historicalprofile_profilepicture_and_more.py
service/src/authentication/models/: Groups.py  Profile.py  __init__.py
service/src/authentication/serializers/: ProfileSerializer.py  __init__.py
service/src/authentication/tests/: test_Profile.py
service/src/plantagora/: admin.py  apps.py  asgi.py  urls.py  wsgi.py
service/src/plantagora/admin/: GardenAdmin.py  __init__.py
service/src/plantagora/api/: SocioeconomicProfileRestView.py  SocioeconomicQuestionnaireRestView.py  __init__.py
service/src/plantagora/migrations/: 0001_initial.py  0002_address.py  0002_remove_address_state.py  0003_alter_grower_documenttype.py  0003_signature_duration.py  0005_gardenbed_address.py  (+10 more)
service/src/utils/: admin.py  apps.py  constants.py  exceptions.py  models.py
(+23 files in other folders)
